<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddressActivity">

    <Button
        android:id="@+id/saveAddress"
        style="@style/buttonStyle"
        android:layout_marginTop="52dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <Button
        android:id="@+id/cancelAddress"
        style="@style/buttonStyle"
        android:layout_marginTop="56dp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/saveAddress" />

    <EditText
        android:id="@+id/editTextCountry"
        style="@style/editTextStyle"
        android:layout_marginTop="84dp"
        android:hint="@string/editCountry"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCity"
        style="@style/editTextStyle"
        android:layout_marginTop="48dp"
        android:hint="@string/editCity"
        app:layout_constraintTop_toBottomOf="@+id/editTextCountry" />

    <EditText
        android:id="@+id/editTextAddress"
        style="@style/editTextStyle"
        android:layout_marginTop="56dp"
        android:hint="@string/editAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextCity" />


</androidx.constraintlayout.widget.ConstraintLayout>