<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NameActivity">

    <EditText
        android:id="@+id/editTextSurname"
        style="@style/editTextStyle"
        android:hint="@string/editSurname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <EditText
        android:id="@+id/editTextName"
        style="@style/editTextStyle"
        android:layout_marginTop="60dp"
        android:hint="@string/editName"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

    <Button
        android:id="@+id/saveName"
        style="@style/buttonStyle"
        android:layout_marginTop="72dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/cancelName"
        style="@style/buttonStyle"
        android:layout_marginTop="40dp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/saveName" />
</androidx.constraintlayout.widget.ConstraintLayout>