<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CommentActivity">

    <Button
        android:id="@+id/cancelComment"
        style="@style/buttonStyle"
        android:layout_marginTop="24dp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/saveComment" />

    <Button
        android:id="@+id/saveComment"
        style="@style/buttonStyle"
        android:layout_marginTop="56dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/editTextComment" />

    <EditText
        android:id="@+id/editTextComment"
        style="@style/editTextStyle"
        android:layout_marginTop="124dp"
        android:hint="@string/editComment"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>