<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-6dp">

    <TextView
        android:id="@+id/nameMain"
        style="@style/textStyle"
        android:layout_marginTop="68dp"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressMain"
        style="@style/textStyle"
        android:layout_marginTop="36dp"
        android:text="@string/address"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <TextView
        android:id="@+id/commentMain"
        style="@style/textStyle"
        android:layout_marginTop="36dp"
        android:text="@string/comment"
        app:layout_constraintTop_toBottomOf="@+id/editAddress" />

    <Button
        android:id="@+id/editComment"
        style="@style/buttonStyle"
        android:layout_marginTop="36dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentMain"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/editName"
        style="@style/buttonStyle"
        android:layout_marginTop="36dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@+id/nameMain" />

    <Button
        android:id="@+id/editAddress"
        style="@style/buttonStyle"
        android:layout_marginTop="36dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@+id/addressMain" />

</androidx.constraintlayout.widget.ConstraintLayout>